// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput should render 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-item"
      >
        <input
          class="input-root form-control input-group-inset input-group-inset-after"
          id="foo"
          name="foo"
          type="password"
          value=""
        />
        <div
          class="input-group-inset-item input-group-inset-item-after"
        >
          <button
            aria-label="Watch"
            class="button-root btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-view icon-root"
              role="presentation"
            >
              <use
                href="#view"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PasswordInput should render with an input type of "text" if showPassword is true 1`] = `
<div>
  <div
    class=""
  >
    <div
      class="input-group"
    >
      <div
        class="input-group-item"
      >
        <input
          class="input-root form-control input-group-inset input-group-inset-after"
          id="foo"
          name="foo"
          type="text"
          value=""
        />
        <div
          class="input-group-inset-item input-group-inset-item-after"
        >
          <button
            aria-label="Hidden"
            class="button-root btn btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-hidden icon-root"
              role="presentation"
            >
              <use
                href="#hidden"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
